52-gke-platform-admins/budita-app/kustomize-bases/frontend/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
  template:
    metadata:
      name: frontend
    spec:
      securityContext:
        fsGroup: 1000
      serviceAccountName: frontend
      containers:
      - name: frontend
        image: frontend
        readinessProbe:
          tcpSocket:
            port: 8080
          periodSeconds: 5
          initialDelaySeconds: 5
        livenessProbe:
          tcpSocket:
            port: 8080
          periodSeconds: 5
          initialDelaySeconds: 5
        ports:
        - name: http
          containerPort: 8080
        securityContext:
          privileged: false
          runAsUser: 1000
          runAsGroup: 1000
