52-gke-platform-admins/budita-app/kustomize-bases/frontend/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: frontend-svc
spec:
  type: ClusterIP
  ports:
  - name: tcp-port
    port: 80
    targetPort: 8080
    protocol: TCP
